force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <label>Attendee</label>
    <pluralLabel>Attendees</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Attendee Name</label>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>