force-app/main/default/objects/Attendee__c/fields/Company__c.field-meta.xml
<CustomField>
  <fullName>Company__c</fullName>
  <label>Company</label>
  <length>255</length>
  <type>Text</type>
</CustomField>