force-app/main/default/objects/Attendee__c/fields/Interest__c.field-meta.xml
<CustomField>
  <fullName>Interest__c</fullName>
  <label>Interest</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Technology</fullName>
      </value>
      <value>
        <fullName>Business</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>