force-app/main/default/objects/Attendee__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Source</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>