force-app/main/default/objects/Attendee__c/fields/Recommended_Event__c.field-meta.xml
<CustomField>
  <fullName>Recommended_Event__c</fullName>
  <label>Recommended Event</label>
  <type>Lookup</type>
  <referenceTo>Event__c</referenceTo>
  <relationshipName>Recommended_Attendees</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>